feat: add frontend likes implementation
