# packages/shared/openapi.json
@@ -568,6 +568,36 @@
         ]
       }
     },
+    "/api/posts/{id}/like": {
+      "post": {
+        "operationId": "PostsController_likePost",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Returns liked status of current profile for post and likesCountDelta.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/LikeToggleResponseDto"
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "Posts"
+        ]
+      }
+    },
     "/api/posts/{id}": {
       "delete": {
         "operationId": "PostsController_remove",
@@ -1137,6 +1167,36 @@
         "required": [
           "text",
           "receiverId"
+        ]
+      },
+      "LikeToggleResponseDto": {
+        "type": "object",
+        "properties": {
+          "postId": {
+            "type": "string",
+            "description": "The unique UUID identifier of the targeted post",
+            "example": "a1b2c3d4-e5f6-7a8b-9c0d-1e2f3a4b5c6d",
+            "format": "uuid"
+          },
+          "isLiked": {
+            "type": "boolean",
+            "description": "Indicates the final interaction state. Returns true if the post is now liked by the user, and false if unliked.",
+            "example": true
+          },
+          "likesCountDelta": {
+            "type": "number",
+            "description": "The numeric delta value to apply to your local client UI counter. Returns 1 for an added like, and -1 for a removed like.",
+            "example": 1,
+            "enum": [
+              1,
+              -1
+            ]
+          }
+        },
+        "required": [
+          "postId",
+          "isLiked",
+          "likesCountDelta"
         ]
       },
       "UpdatePostDto": {
